--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "bootstrap-ui-datetime-picker",
-  "version": "2.3.1",
-  "homepage": "https://github.com/Gillardo/bootstrap-ui-datetime-picker",
+  "name": "bootstrap-ui-datetime-picker-focus-fork",
+  "version": "2.3.2",
+  "homepage": "https://github.com/DavidKoenig/bootstrap-ui-datetime-picker.git",
   "authors": [
-    "Gillardo <darren.gillard81@gmail.com>"
+    "Gillardo <darren.gillard81@gmail.com>, David"
   ],
   "description": "AngularJs directive to use a date and/or time picker as a dropdown from an input",
   "license": "MIT",
